--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.holidayList.HolidaytList">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:orientation="vertical"
+       android:layout_margin="@dimen/sisteen"
+       android:layout_height="match_parent">
+
+
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content">
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/btnLeftArrow"
+            app:bootstrapText="{fa_angle_left}"
+            app:bootstrapBrand="success"
+            app:bootstrapSize="xl"
+            android:layout_weight = "0"
+            app:buttonMode="regular"
+            app:showOutline="false"
+            app:roundedCorners="true"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight = "1"
+            android:layout_height="wrap_content">
+           <com.beardedhen.androidbootstrap.BootstrapDropDown
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_centerHorizontal="true"
+               android:id="@+id/firstDaySelect"
+               app:bootstrapText="@string/FirstDay"
+               app:bootstrapBrand="regular"
+               android:layout_marginHorizontal="@dimen/sisteen"
+               app:roundedCorners="true"
+               app:bootstrapSize="xl"
+               app:dropdownResource="@array/bootstrap_dropdown_example_data"
+               app:bootstrapExpandDirection="down"/>
+
+           <com.beardedhen.androidbootstrap.BootstrapAlert
+               android:layout_width="match_parent"
+               android:layout_marginTop="5dp"
+               android:layout_marginHorizontal="@dimen/sisteen"
+               android:layout_height="wrap_content">
+
+              <com.beardedhen.androidbootstrap.AwesomeTextView
+                  android:layout_width="wrap_content"
+                  app:bootstrapBrand="primary"
+                  android:textSize="16sp"
+                  android:id="@+id/dateHolder"
+                  android:layout_centerHorizontal="true"
+                  android:text="12-03-2013 - 01-12-2014"
+                  android:layout_height="wrap_content"/>
+           </com.beardedhen.androidbootstrap.BootstrapAlert>
+
+        </LinearLayout>
+
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/btnRightArrow"
+            android:layout_weight = "0"
+            app:bootstrapText="{fa_angle_right}"
+            android:layout_alignParentRight="true"
+            app:bootstrapBrand="success"
+            app:bootstrapSize="xl"
+            app:buttonMode="regular"
+            app:showOutline="false"
+            app:roundedCorners="true"
+            />
+     </LinearLayout>
+
+
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:id="@+id/recyclerView"
+          android:layout_height="wrap_content"/>
+
+   </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
