--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="toolbar_color">#282828</color>
+    <color name="page_bg_color">#0E0E0E</color>
+    <color name="item_view_bg_color">#1B1B1B</color>
+    <color name="text_grey">#bdbdbd</color>
+    <color name="text_grey_light">#616161</color>
+    <color name="blue_grey_700">#455A64</color>
+    <color name="brown_700">#5D4037</color>
+
+
 </resources>
