--- a/app/src/main/res/layout/calenda_item_view.xml
+++ b/app/src/main/res/layout/calenda_item_view.xml
@@ -1,6 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:elevation="5dp"
+    android:layout_margin="2dp"
+    android:paddingBottom="2dp"
+    app:cardCornerRadius="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/item_view_bg_color">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/startDate"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/date1"
+            android:gravity="center"
+            android:lineSpacingExtra="2.5dp"
+            android:textAllCaps="true"
+            android:textColor="@color/text_grey"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.143"
+            tools:text="THU\nJUN 30\n14:00" />
+
+        <!--Colored view dividers-->
+        <View
+            android:layout_width="1.3dp"
+            android:layout_height="0dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/startDate"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="0.7dp"
+            android:layout_height="0dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/startDate"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <LinearLayout
+            android:id="@+id/endLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintLeft_toRightOf="@+id/startDate"
+            app:layout_constraintDimensionRatio="W,2:10">
+
+
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/HoliName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/text_grey"
+                android:textSize="16sp"
+                tools:text="Lagos" />
+        </LinearLayout>
+
+
+
+
+
+        <!--Departure/Destination dividers-->
+
+
+
+        <!--Edge dividers-->
+        <View
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:background="@color/page_bg_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
