--- a/app/src/main/res/layout/calenda_view.xml
+++ b/app/src/main/res/layout/calenda_view.xml
@@ -80,7 +80,7 @@
             app:cv_scrollMode="continuous" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/exFiveRv"
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false" />
