--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="text_grey_light">#616161</color>
     <color name="blue_grey_700">#455A64</color>
     <color name="brown_700">#5D4037</color>
+    <color name="date1">#5D4037</color>
+    <color name="date2">#4285f4</color>
 
 
 </resources>
