BottomBar added, workinf and startes two activities, with animation

--- a/app/src/main/res/layout/calenda_view.xml
+++ b/app/src/main/res/layout/calenda_view.xml
@@ -67,6 +67,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_weight="1"
         android:layout_height="match_parent">
 
         <com.kizitonwose.calendarview.CalendarView
@@ -85,6 +86,14 @@
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false" />
     </LinearLayout>
+
+
+
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:layout_gravity="bottom"
+        android:id="@+id/bottom_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
